# pdf-extraction-data-migration

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
Frontend/: package-lock.json  package.json
Frontend/src/app/: layout.tsx
Frontend/src/components/: dashboard-content.tsx  providers.tsx
Frontend/src/components/dashboard/: forms.tsx  header.tsx  loading-overlay.tsx  result-panel.tsx  sections.tsx  use-dashboard-state.ts
Frontend/src/lib/: api-client.ts  query-client.ts
Frontend/src/types/: api.ts
data/: ~$profiles.xlsx
profile_backend/: Task Details.md  __init__.py  ai_extractor.py  app.py  cloud_pipeline.py  config.py  extractor.py  gdrive_client.py  google_auth.py  gsheets_client.py  ids.py  logging_setup.py  metadata_light.py  models.py  nlp_utils.py  organize.py  pipeline.py  spreadsheet.py  text_extract.py
profile_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
profile_backend/src/: __init__.py
profile_backend/src/profile_backend/: __init__.py
profile_backend/src/profile_backend/api/: app.py  google_config_http.py
profile_backend/src/profile_backend/application/: google_cloud_config.py
profile_backend/src/profile_backend/application/services/: cloud_processing.py  local_processing.py
profile_backend/src/profile_backend/cli/: main.py
profile_backend/src/profile_backend/core/: logging.py  settings.py
profile_backend/src/profile_backend/domain/: __init__.py  ids.py  models.py  organize.py
profile_backend/tests/: test_api_smoke.py  test_domain_helpers.py  test_google_cloud_config.py
(+11 files in other folders)
